@@ -7,6 +7,7 @@ Changes in 0.8.5 (released on November 8, 2009)
 - Removed PyPogolyn
 - Modified ckID::genID and ckID_ macro
 - Suspended support for iPhone
+- Modified the sample #10 to hide the mouse cursor
 
 
 Changes in 0.8.0 (released on August 15, 2009)
